--- a/views/Resetpw.ejs
+++ b/views/Resetpw.ejs
@@ -9,12 +9,12 @@
 				<div class="col-md-6 offset-md-3">
 					<label class="control-label">Password</label>
 					<input placeholder="**********" type="password" id="password" name="password" data-vpw="true" required />
-					<span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to be atleast alphanumeric</span>
+					<span id="i_password" class="form-info"><b>Password</b> must contain between <b>8 and 256 characters</b> and has to be atleast <b>alphanumeric</b></span>
 				</div>
 				<div class="col-md-6 offset-md-3">
 					<label class="control-label">Password <i>(confirm)</i></label>
 					<input placeholder="**********" type="password" id="password2" data-vpw2="true" name="password2" required />
-					<span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
+					<span id="i_password2" class="form-info"><b>Password Confirmation</b> doesn't match <b>password</b></span>
 				</div>
 				<div class="col-md-6 offset-md-3 mt-3">
 					<input type="submit" class="submit-btn" value="Save" id="submit-resetpw" />
