--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -10,13 +10,13 @@
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input type="text" name="title" id="title" placeholder="Titre" data-vstring="1;256" required />
-					<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+					<span id="i_title" class="form-info"><b>Title</b> must contain between <b>1 and 256 characters</b></span>
 				</div>
 
 				<div class="form-group">
 					<label class="control-label">Description</label>
-					<textarea rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." data-vstring="1;2048" required></textarea>
-					<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
+					<textarea rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." data-vstring="1;4096" required></textarea>
+					<span id="i_content" class="form-info"><b>Content</b> must contain between <b>1 and 4096 characters</b></span>
 				</div>
 
 				<div class="form-group">
