--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,7 +12,7 @@
 		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux" />
 		<!-- add keywords -->
 		<meta name="author" content="Maral Abkarian" />
-		<title><%= (locals.active) ? locals.active : 'Maral' %></title>
+		<title><%= (locals.headtitle) ? locals.headtitle : 'Maral' %></title>
 		<!-- JQuery -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<!-- FontAwesome Icons -->
@@ -63,7 +63,7 @@
 						<% } %>
 
 						<li>
-							<a href="/Blog" class="navbar-text <%= (locals.active && locals.active == 'About') ? 'active' : '' %>">Blog</a>
+							<a href="/Blog" class="navbar-text <%= (locals.active && locals.active == 'Blog') ? 'active' : '' %>">Blog</a>
 						</li>
 
 						<li>
@@ -92,7 +92,7 @@
 						</li>
 						<% } %>
 						<li id="cart-qty-li">
-							<a href="/shopping-cart" class="navbar-text <%= (locals.active && locals.active == 'Cart') ? 'active' : '' %>"><i class="fas fa-shopping-cart fa-2x"></i></a>
+							<a href="/shopping-cart" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a>
 							<span id="cartQty"><%= (locals.session.cart && locals.session.cart.totalQty) ? locals.session.cart.totalQty : 0 %></span>
 						</li>
 					</ul>
