--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -8,13 +8,13 @@
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.blog.title %>" data-vstring="1;256" required />
-					<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+					<span id="i_title" class="form-info"><b>Title</b> must contain between <b>1 and 256 characters</b></span>
 				</div>
 
 				<div class="form-group">
 					<div id="editor"></div>
 					<input type="hidden" name="content" id="content" />
-					<span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+					<span id="i_content" class="form-info"><b>Content</b> must contain between <b>128 and 4096 characters</b></span>
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
