--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -8,13 +8,13 @@
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input id="title" type="text" placeholder="Titre" name="title" data-vstring="1;256" value="<% if (locals.formData) { %><%= locals.formData.title %><% } %>" required />
-					<span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
+					<span id="i_title" class="form-info"><b>Title</b> must contain between <b>4 and 256 characters</b></span>
 				</div>
 
 				<div class="form-group">
 					<div id="editor"></div>
 					<input type="hidden" name="content" id="content" />
-					<span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+					<span id="i_content" class="form-info"><b>Content</b> must contain between <b>128 and 4096 characters</b></span>
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
