ajaxified user page, changed language for cancel order dialog box for user, added arrow to notice user to scroll down, now properly displaying street_name where needed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 </div>
 
 <div class="full-container">
-	<div class="container container-front">
+	<div class="container container-front pb-0 mb-0">
 		<div class="carousel-home">
 			<div id="carousel-thumb" class="carousel slide carousel-thumbnails" data-ride="carousel">
 				<!--Slides-->
@@ -42,6 +42,8 @@
 		</div>
 		<h1 class="square-title text-center">Want to see more?</h1>
 		<input type="submit" class="submit-btn call-btn" value="Take me to the Gallery" id="goto-gallery" />
+
+		<div class="scroll-indicator"></div>
 	</div>
 </div>
 
