--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -92,7 +92,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<label class="control-label">Street</label>
-							<input id="route" name="street_name" value="<% if (locals.order.full_street) { %><%= locals.order.full_street %><% } %>" readonly />
+							<input id="route" name="street_name" value="<% if (locals.order.street_name) { %><%= locals.order.street_name %><% } %>" readonly />
 						</div>
 					</div>
 					<div class="row">
