--- a/public/style.css
+++ b/public/style.css
@@ -40,6 +40,35 @@
 	--light-shade-p1: #d6d6d6;
 }
 
+.scroll-indicator {
+	height: 140px;
+	position: relative;
+	width: 100%;
+}
+
+.scroll-indicator::before {
+	animation: bounce 1s ease infinite;
+	bottom: 2rem;
+	color: #fff;
+	content: "╲╱";
+	font-size: 2rem;
+	height: 4rem;
+	left: 50%;
+	letter-spacing: -1px;
+	line-height: 4rem;
+	margin-left: -3rem;
+	opacity: 0.8;
+	position: absolute;
+	text-align: center;
+	width: 6rem;
+}
+
+@keyframes bounce {
+	50% {
+		transform: translateY(-25%);
+	}
+}
+
 a {
 	color: #0066ff;
 }
@@ -696,6 +725,10 @@ footer {
 	z-index: 99999;
 	margin: 0 50%;
 	transform: translate(-50%, 0px);
+}
+
+.alert-header {
+	margin-top: 4%;
 }
 
 .bootstrap-tagsinput {
