--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -150,7 +150,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<label class="control-label">Street</label>
-						<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required disabled />
+						<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.street_name) { %><%= locals.delivery.street_name %><% } %>" required disabled />
 					</div>
 				</div>
 				<div class="row">
