--- a/views/User.ejs
+++ b/views/User.ejs
@@ -15,10 +15,6 @@
 		<div id="parameters" class="tab col-md-12">
 			<div class="col-md-10 offset-md-1 p-2">
 				<h1 class="square-title text-center">Settings</h1>
-				<!--
-				<div class="alert alert-warning alert-static mb-3" role="alert">
-					Remember to keep these informations private
-				</div>-->
 
 				<div class="settings">
 					<div class="row">
@@ -49,7 +45,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<label class="control-label">Password <i>(current)</i></label>
-								<input type="password" name="cpassword" placeholder="*********" required />
+								<input type="password" name="cpassword" id="cpassword" placeholder="*********" required />
 								<span data-placeholder="Current Password"></span>
 							</div>
 
@@ -117,7 +113,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<label class="control-label">Street</label>
-								<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required />
+								<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.street_name) { %><%= locals.delivery.street_name %><% } %>" required />
 							</div>
 						</div>
 						<div class="row">
@@ -229,6 +225,6 @@
 </div>
 
 <script src="/scripts/user.js" defer></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEBWHg2gKU3uMKQWSvn4yXWV5RavPm1PU&libraries=places&callback=initAutocomplete" async defer></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBluorKuf7tdOULcDK08oZ-98Vw7_12TMI&libraries=places&callback=initAutocomplete" async defer></script>
 <script src="/scripts/core/auto-complete.js"></script>
 <script src="/scripts/core/frontValidation.js" defer></script>
