--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -110,7 +110,7 @@
 		<script src="/scripts/cookies-eu-banner/src/customize.js"></script>
 
 		<% if (messages){ %> <% Object.keys(messages).forEach(function (type) { %> <% messages[type].forEach(function (message) { %>
-		<div id="alert" class="alert alert-<%= type %>" role="alert">
+		<div id="alert" class="alert alert-<%= type %> alert-header" role="alert">
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			</button>
