--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<% if (locals.order.status !== "Cancelled" && locals.order.status !== "Submitted" && locals.order.status !== "Completed" && locals.order.status !== "awaitingStripePayment") { %>
-			<input type="submit" data-id="<%= locals.order._id %>" class="cancelbtn" value="CANCEL ORDER" />
+			<input type="submit" data-id="<%= locals.order._id %>" class="cancelbtn" data-cancelbtn="true" value="CANCEL ORDER" />
 			<% } %> <% if (locals.order && locals.order.items) { %>
 			<h1 class="square-title text-center">Your Order</h1>
 
@@ -93,7 +93,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<label class="control-label">Street</label>
-							<input id="route" name="street_name" value="<% if (locals.order.full_street) { %><%= locals.order.full_street %><% } %>" readonly />
+							<input id="route" name="street_name" value="<% if (locals.order.street_name) { %><%= locals.order.street_name %><% } %>" readonly />
 						</div>
 					</div>
 					<div class="row">
