added back scrollbar, added smooth-scrollbar

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="body-smooth">
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
@@ -38,6 +38,11 @@
 
 		<link rel="stylesheet" href="/quill/quill.snow.css" />
 		<link rel="stylesheet" href="/quill/quill.core.css" />
+
+		<script src="/scripts/smooth-scrollbar.js"></script>
+
+		<!-- smooth scroll 
+		<script src="/scripts/SmoothScroll.js" defer></script>-->
 
 		<script src="/scripts/core/errorMessages.js"></script>
 		<script src="/scripts/core/tools.js" defer></script>
